# chap-models-checker

./: .gitignore  Makefile  README.md  STATUS.md  TRIAGE.md  findings.md  last_report.json  pyproject.toml
.github/workflows/: ci.yml
src/chap_models_checker/: __init__.py  __main__.py  chapkit_service.py  cli.py  datagen.py  discover.py  models.py  report.py  runner.py  spec.py
tests/: conftest.py  test_smoke.py
